Charts/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: samiapp
spec:
  selector:
    app: samiapp
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  type: LoadBalancer
